# inverse_kinematics

./: .gitignore  InverseKinematics.hs  Main.hs  README  inverse_kinematics.cabal
final_report/: final_report.tex
input/: complex.txt  humanoid.txt  simple.txt  standard.txt
output/: cool_animation.mkv  running.mkv  simple_solving.mkv
status_updates/: status_update_1.tex  status_update_2.tex
